--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           TAG_NAME="dev/$(date +'%Y%m%d%H%M%S')"
           git tag $TAG_NAME
-          echo "::set-output name=tag::$TAG_NAME"
+          echo "tag=$TAG_NAME" >> GITHUB_OUTPUT
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
