Update README and license, remove unused assets
Updated the README with clearer installation and usage instructions, and expanded the list of available effects. Added sanyabeast as a copyright holder in the LICENSE. Removed unused icons, SVGs, and screenshot assets to clean up the repository.

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="PostFX"
 description="PostFX is a simple post processing plugin.	"
-author="Korin"
-version="0.1.1"
+author="Korin & sanyabeast"
+version="0.1.2"
 script="plugin.gd"
